<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">وصّلني</string>
    <string name="action_settings">Settings</string>


    <string name="fragment_one">الإشتراكات</string>
    <string name="fragment_two">ابحث عن رحلة</string>
    <string name="fragment_three">طلبات قيد التفعيل</string>
    <string name="fragment_four">تقديم شكوى</string>
    <string name="fragment_fifth">بياناتي</string>
    <string name="fragment_about">تسجيل خروج</string>

    <string name="number1">I</string>
    <string name="number2">II</string>
    <string name="number3">III</string>
    <string name="number4">IIII</string>

    <string name="fragment">Fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_name">wassilni</string>
    <string name="user_email">wassilni</string>

    <string name="content_description">image view</string>


    <string name="about_text">This application is an example of a Navigation Drawer implementation using a new/bind pattern and the ButterKnife library.</string>
    <string name="about_text2">It was written only for development purposes.</string>

    <string name="about_contact">wassilni</string>
    <string name="about_libraries">Libraries:</string>
    <string name="about_butterknife">wassilni</string>
    <string name="about_robototextview">RobotoTextView by Evgeny Shishkin</string>

    <string name="about_msg_subject">[NavigationDrawerSI]</string>
    <string name="about_mail_chooser">Send with</string>
    <string name="about_intent_failed">The requested application could not be launched.</string>
    <string name="about_author">wassilni</string>
    <string name="userName">اسم المستخدم</string>
    <string name="loginbutton">تسجيل الدخول</string>
    <string name="password">كلمة المرور</string>
    <string name="logo">logo</string>
    <string name="uN">اسم المستخدم</string>
    <string name="pass">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="recoverdpassword">نسيت كلمة المرور؟</string>
    <string name="register">التسجيل</string>
    <string name="order">الطلبات الحالية</string>
    <string name="numoforder">رقم الطلب</string>
    <string name="driver">السائق</string>
    <string name="destination">الوجهة</string>
    <string name="startdate">تاريخ البدء</string>
    <string name="enddate">تاريخ الإنتهاء</string>
    <string name="desti">الوجهة</string>
    <string name="location">المكان الحالي</string>
    <string name="oneway">ذهاب فقط</string>
    <string name="starttime">وقت الذهاب</string>
    <string name="endtime">وقت العودة</string>
    <string name="twoway">ذهاب وعودة</string>
    <string name="searchb">ابحث</string>
    <string name="name">Name</string>
    <string name="name1">Name</string>
    <string name="newOrder">الطلبات اللتي انشأتها</string>
    <string name="write_complaint">write complaint</string>
    <string name="send">ارسال</string>
    <string name="sendComplaint">ما المشكلة؟</string>
    <string name="user">الاسم:</string>
    <string name="email">البريد الإلكتروني:</string>
    <string name="school">المدرسة أو الشركة:</string>
    <string name="phone">رقم الجوال:</string>
    <string name="edit">تعديل بياناتي</string>
    <string name="fname">الاسم الأول</string>
    <string name="lname">الاسم الأخير</string>
    <string name="cpass">كلمة المرور الحالية</string>
    <string name="newpass">كلمة المرور الجديدة</string>
    <string name="confpass">تأكيد كلمة المرور</string>
    <string name="username">اسم المستخدم</string>
    <string name="emailed">البريد الإلكتروني</string>
    <string name="savechange">حفظ التغييرات</string>
    <string name="delete">حذف الحساب</string>
    <string name="name3">Name</string>
    <string name="name4">Name</string>
    <string name="name5">Name</string>
    <string name="usernamelogin">اسم المستخدم</string>
    <string name="passlogin">كلمة المرور</string>
    <string name="registers">حساب جديد</string>
    <string name="login1">تسجيل دخول</string>
    <string name="passwords">كلمة المرور</string>
    <string name="del">حذف الحساب</string>
    <string name="savechanges">حفظ التغييرات</string>
    <string name="requestbutton">انشاء الطلب</string>
    <string name="absent">الغياب</string>


    <!--selection option of hours -->
    <string-array name="hours">
        <item>الساعات</item>
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>


    <!--selection option of mints and secound-->
    <string-array name="mintSec">
        <item>الدقائق</item>
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="sorting">
        <item>الترتيب على حسب </item>
        <item>أعلى سعر </item>
        <item>أقل سعر </item>
    </string-array>
</resources>
