<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                style="@style/Match"
                android:id="@+id/fragmentOne"
    android:background="@color/gray_shadow">

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="100dp"
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/numoforder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginTop="59dp"
        android:id="@+id/textView2"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp"
        android:id="@+id/textView4"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="20dp"
        android:id="@+id/view" />

    <Button
        android:text="سأغيب"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/blue_button"
        android:layout_alignLeft="@+id/view"
        android:layout_alignStart="@+id/view"
        android:id="@+id/absent"
        android:textSize="24sp" />

</RelativeLayout>