<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wassilni.pl.navigationdrawersi.ui.login"
    android:background="@color/gray_shadow"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView2" />

        <android.support.v7.widget.AppCompatTextView
            android:text="البريد الإلكتروني"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/nameuser"
            android:textColor="@color/black"
            android:layout_above="@+id/username"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="12dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="22sp"
            android:ems="10"
            android:id="@+id/emailUET"
            android:background="@android:drawable/editbox_background_normal"
            android:textColor="?attr/colorButtonNormal" />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/passwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordlabel"
            android:textSize="22sp"
            tools:ignore="RelativeOverlap"
            android:textColor="@color/black"
            android:layout_above="@+id/loginbutton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="22sp"
            android:id="@+id/passwordET"
            android:background="@android:drawable/editbox_background_normal"
            android:textColor="?attr/colorBackgroundFloating" />

        <Button
            android:text="@string/login1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginbutton"
            android:background="@color/blue_dark"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:onClick="userLogin"
            android:layout_marginBottom="10dp" />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/recoverdpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recoverdpass"
            android:textSize="18sp"
            android:textColor="@color/material_blue"
            android:layout_above="@+id/signin"
            android:layout_centerHorizontal="true"
            android:gravity="bottom|center"
            android:foregroundGravity="bottom" />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/registers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/signin"
            android:textSize="18sp"
            android:textColor="@color/material_blue"
            android:gravity="center" />


    </LinearLayout>


</RelativeLayout>
